# vortex-orca-sim

./: .gitignore  README.md
ocean_current/: CMakeLists.txt  package.xml
ocean_current/launch/: ocean_current.launch.py
ocean_current/src/: ocean_current_publisher.cpp
orca_sim/: CMakeLists.txt  package.xml
orca_sim/launch/: orca_sim.launch.py  state_publisher_launch.py  upload_bluerov2_launch.py
orca_sim/meshes/: bluerov2_propccw.dae  bluerov2_propcw.dae  ping360_sonar.dae
orca_sim/models/coast_water/: model.sdf
orca_sim/models/coast_water/meshes/: waterlow.dae
orca_sim/urdf/: demo_world.sdf  hydrodynamics.xacro  orca.xacro  sensors.xacro  thrusters_orca.xacro
vortex_sim_interface/: CMakeLists.txt  package.xml
vortex_sim_interface/src/: vortex_sim_interface.cpp
